# SME

./: CLAUDE.md  Gemini.md  README.md
cable_thermal/: .gitignore  CLAUDE.md  PLAN.md  README.md  pyproject.toml
cable_thermal/data/sample/: CYMCAP_DataDictionary.xlsx
cable_thermal/scripts/: generate_data_dictionary.py
cable_thermal/src/cable_thermal/: __init__.py
cable_thermal/src/cable_thermal/benchmarks/: __init__.py  cigre_data.py  validation.py
cable_thermal/src/cable_thermal/db/: __init__.py  access_reader.py  models.py  schemas.py
cable_thermal/src/cable_thermal/fem/: __init__.py  mesh.py  thermal_2d.py  thermal_3d.py
cable_thermal/src/cable_thermal/iec/: __init__.py
cable_thermal/src/cable_thermal/iec/iec60287/: __init__.py  conductor_losses.py  dielectric_losses.py  rating.py  sheath_losses.py  thermal_resistance.py
cable_thermal/src/cable_thermal/iec/iec60853/: __init__.py  cyclic_factors.py  rating.py  transient.py
cable_thermal/src/cable_thermal/reporting/: __init__.py  calc_trace.py  renderer.py  report.py
cable_thermal/src/cable_thermal/reporting/templates/: fem_results.tex.j2  iec60287_report.tex.j2  iec60853_report.tex.j2
cable_thermal/tests/test_db/: test_access_reader.py  test_models.py
docs/nesc/: rule-235e.md
excel-mcp-server/: README.md  SETUP_GUIDE.md  excel_mcp_server.py  pyproject.toml
go95/: module.neara.hjson
nesc/: module.neara.hjson
portland_nesc/: module.neara.hjson
sidecar/: CLAUDE.md  PLAN_SYNC_EXTENSIONS.md  README.md  SETUP_FOR_CLAUDE.md  package-lock.json  package.json  start-sidecar.command
(+118 files in other folders)
