[project]
name = "cable-thermal"
version = "0.1.0"
description = "Thermal rating calculations for underground power cables"
requires-python = ">=3.12"
dependencies = [
    "pyodbc>=5.0",
    "pydantic>=2.0",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff", "mypy"]
notebooks = ["jupyter", "matplotlib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cable_thermal"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
