[project]
name = "excel-mcp-server"
version = "1.0.0"
description = "MCP server for analyzing Excel files including formulas and VBA macros"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Hrit Kandel" }
]
dependencies = [
    "mcp>=1.0.0",
    "openpyxl>=3.1.0",
    "oletools>=0.60",
]

[project.scripts]
excel-mcp-server = "excel_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
